--- a/termos.html
+++ b/termos.html
@@ -124,8 +124,8 @@
         <div class="footer-info">
           <h3>Coelho Fotografias</h3>
           <address>
-            Rua Exemplo, 123 - Bairro Centro<br />
-            Cidade - UF, CEP 00000-000<br />
+            R. Regimento Barriga Verde, 1036 - Bairro Centro<br />
+            Araranguá - SC, CEP 88900-061<br />
             Brasil
           </address>
         </div>
