Ajusta email e telefone

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <h2>Contato</h2>
             <p>
               Enquanto isso, fale conosco:
-              <a href="mailto:contato@coelhofotografias.com.br">contato@coelhofotografias.com.br</a>
+              <a href="mailto:coelhofotografia3@gmail.com">coelhofotografia3@gmail.com</a>
               <br />
-              WhatsApp: <a href="https://wa.me/5500000000000" target="_blank" rel="noopener">+55 (00) 00000-0000</a>
+              WhatsApp: <a href="https://wa.me/5548976066003" target="_blank" rel="noopener">+55 (48) 97606-6003</a>
             </p>
           </div>
         </div>
