--- a/privacidade.html
+++ b/privacidade.html
@@ -127,8 +127,8 @@
             Para dúvidas relacionadas à privacidade e proteção de dados, entre em contato
             pelo e-mail:
             <br />
-            <a href="mailto:contato@coelhofotografias.com.br">
-                contato@coelhofotografias.com.br
+            <a href="mailto:coelhofotografia3@gmail.com">
+                coelhofotografia3@gmail.com
             </a>
             </p>
         </div>
