--- a/termos.html
+++ b/termos.html
@@ -106,7 +106,7 @@
                 <p>
                     Em caso de dúvidas ou solicitações, entre em contato pelo e-mail:
                     <br />
-                    <a href="mailto:contato@coelhofotografias.com.br"> contato@coelhofotografias.com.br </a>
+                    <a href="mailto:coelhofotografia3@gmail.com"> coelhofotografia3@gmail.com </a>
                 </p>
             </div>
         </div>
